// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Boolean for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <label
    class="b-checkbox checkbox"
  >
    <input
      true-value="true"
      type="checkbox"
      value="false"
    />
     
    <span
      class="check"
    />
     
    <span
      class="control-label"
    >
      
        
      
    </span>
  </label>
</span>
`;

exports[`Field.Boolean for Resource.List Empty 1`] = `
<div>
  <label
    class="b-checkbox checkbox is-disabled"
    disabled="disabled"
  >
    <input
      disabled="disabled"
      true-value="true"
      type="checkbox"
      value="false"
    />
     
    <span
      class="check"
    />
     
    <span
      class="control-label"
    />
  </label>
</div>
`;

exports[`Field.Boolean for Resource.List With false value 1`] = `
<div>
  <label
    class="b-checkbox checkbox is-disabled"
    disabled="disabled"
  >
    <input
      disabled="disabled"
      true-value="true"
      type="checkbox"
      value="false"
    />
     
    <span
      class="check"
    />
     
    <span
      class="control-label"
    />
  </label>
</div>
`;

exports[`Field.Boolean for Resource.List With security issue value 1`] = `
<div>
  <label
    class="b-checkbox checkbox is-disabled"
    disabled="disabled"
  >
    <input
      disabled="disabled"
      true-value="true"
      type="checkbox"
      value="false"
    />
     
    <span
      class="check"
    />
     
    <span
      class="control-label"
    />
  </label>
</div>
`;

exports[`Field.Boolean for Resource.List With true value 1`] = `
<div>
  <label
    class="b-checkbox checkbox is-disabled"
    disabled="disabled"
  >
    <input
      disabled="disabled"
      true-value="true"
      type="checkbox"
      value="false"
    />
     
    <span
      class="check"
    />
     
    <span
      class="control-label"
    />
  </label>
</div>
`;
